# Rust_Ray_Tracer

./: .gitignore
raytracer/: Cargo.toml
raytracer/src/: aabb.rs  bvh.rs  camera.rs  cfg.rs  color.rs  hit.rs  main.rs  mat.rs  perlin.rs  quad.rs  ray.rs  scene.rs  sphere.rs  texture.rs  utils.rs  vec3.rs  world.rs
raytracer/src/color/: color.rs  mat.rs  perlin.rs  texture.rs
raytracer/src/geom/: cube.rs  mesh.rs  mod.rs  quad.rs  ray.rs  sphere.rs  triangle.rs  vec3.rs
raytracer/src/hit/: aabb.rs  bvh.rs  hit.rs  hittable.rs  mod.rs
raytracer/src/render/: color.rs  mat.rs  mod.rs  onb.rs  pdf.rs  perlin.rs  texture.rs
raytracer/src/transform/: rotate.rs  translate.rs
raytracer/src/world/: camera.rs  hittablelist.rs  mod.rs  scene.rs  world.rs
