[package]
name = "raytracer"
version = "0.1.0"
authors = ["Pseudo Photograph Company of ACM <ppca@ppca.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
indicatif = "*"
imageproc = "*"
rusttype = "*"
threadpool = "*"
raytracer_codegen = { path = "../raytracer_codegen" }
rand = "0.8.5"
