[package]
name = "raytracer"
version = "0.1.0"
authors = ["Pseudo Photograph Company of ACM <ppca@ppca.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
indicatif = "0.17.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
threadpool = "1.8.1"
raytracer_codegen = { path = "../raytracer_codegen" }
rand = "0.8.5"
rayon = "1.8.0"
